# lot.rs

./: .gitignore  CLAUDE.md  Cargo.toml  readme.md
.github/workflows/: ci.yml  release.yml
crates/lot-cli/: Cargo.toml
crates/lot-cli/src/: cli.rs  main.rs
crates/lot-core/: Cargo.toml
crates/lot-core/src/: config.rs  error.rs  frontmatter.rs  git.rs  id.rs  lib.rs  render.rs  skills.rs  thing.rs  update.rs  vault.rs
crates/lot-tui/: Cargo.toml
crates/lot-tui/src/: app.rs  main.rs  markdown.rs  model.rs  ui.rs
data/: config.example.toml  new-vault-readme.md
data/skills/lot-task/: SKILL.md
docs/: release.md
scripts/: build  check  fmt-check  install  lint  lint-autofix  release  run  test  tmp-new-thing
