[workspace]
resolver = "2"
members = ["crates/lot-core", "crates/lot-cli", "crates/lot-tui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Logan Campbell"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
toml = "0.8"
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
shellexpand = "3"
ratatui = "0.30"
pulldown-cmark = "0.13"

[profile.release]
strip = true
lto = true
